--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://extractor-consumer-db.crq8bwht6zh7.us-east-1.rds.amazonaws.com/extractor-consumer-db
+spring.datasource.url=jdbc:postgresql://extractor-db.crq8bwht6zh7.us-east-1.rds.amazonaws.com:5432/extractor_consumer_db
 spring.datasource.username=postgres
 spring.datasource.password=strongpass
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialec
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
