--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
 	annotationProcessor 'org.projectlombok:lombok:1.18.26'
-
+	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
 tasks.named('test') {
